update test runner
